--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-Joci vagyok
-
+<!DOCTYPE html>
+<html lang="hu">
 <head> 
-	<title></title>
+	<title>Joci</title>
 </head>
 <body>
 <h1>Újévi weblap </h1>
 	<h2>Sikeresben gazdag,és új esztendőt,kívánok mindenkinek!!</h2>
 	  <h3>Sikeresben gazdag,örömteli új esztendőt.kívánok 2018-ra is</h3>
-	  <img src="letöltés.jpg"wid="168"heidgh="168"répa=:)">
+	  <img src="letöltés.jpg"wid="168"heidgh="168"répa=:)"> <!
 	  <h4>roeghrope</h4>
 	  <img src="images.jpg"wid="178"heidgh="178"pezsgő:)"> 
 	  <a href="http://google.hu/">Látogasd meg a Google-t!</a>
@@ -19,10 +19,10 @@ Joci vagyok
 	  	 <li>kutya</li>
 	  		<li>macska</li>
 	  		<li>kakas</li><br>
-	  		<di>
-	  			<dit>fej</dit>
-	  			<<dd>Tenek</dd>
-	  			<dit>kenyér</dit>
+	  		<dl>
+	  			<dt>fej</dt>
+	  			<dd>Tenek</dd>
+	  			<dt>kenyér</dt>
 	  			<dd>Péékek</dd>
 </body>
-</html
+</html>
