--- a/index.html
+++ b/index.html
@@ -1,30 +1,48 @@
-<!DOCTYPE html>
-<html lang="hu">
-	<head> 
-		<title>Joci</title>
+<DOCTRYPE html>
+	<!DOCTYPE html>
+	<html>
+	<head>
+		<title></title>
 	</head>
-	
 	<body>
-		<h1>Újévi weblap </h1>
-		<h2>Sikeresben gazdag,és új esztendőt,kívánok mindenkinek!!</h2>
-	  	<h3>Sikeresben gazdag,örömteli új esztendőt.kívánok 2018-ra is</h3>
-	  	<img src="letöltés.jpg"wid="168"heidgh="168"répa=:)"> <!
-	  	<h4>roeghrope</h4>
-	  	<img src="images.jpg"wid="178"heidgh="178"pezsgő:)"> 
-	  	<a href="http://google.hu/">Látogasd meg a Google-t!</a>
-		<ul>
-			<li>tej</li>
-			<li>kenyér</li>
-			<li>Szalami</li><br>
-			<li>kutya</li>
-	  		<li>macska</li>
-	  		<li>kakas</li><br>
-		</ul>	
-	  	<dl>
-	  		<dt>fej</dt>
-	  		<dd>Tenek</dd>
-	  		<dt>kenyér</dt>
-			<dd>Péékek</dd>
-		</dl>	
+		<h1>FC BARCELONA</h1>
+		<h2>történeténete</h2>
+	<p>Az egyesületet 1899 november 29-én alapította a Svájci Hans Gamper.<br>
+	Az Fc Barcelona Spanyolország Katalonia tartományának labdarügó csapata.<br>
+	A klub a spanyol labdarúgó-bajnokság kezdetétől megszakítás nélkül részt vesz. Az<br>
+	 Fc Barcelona előbb a katalán regionális bajjnokságában,és a spanyol labdarúgó-bajnokságában vett részt.<br>
+	  1928-ban megalakított egység spanyol labdarúgó.bajnokság (PrimeraDivisón) és a nemzetközé kupákban vált a spanyol,valamint a nemzetközi labdarúgás<br>
+	  Az Fc Barcelona egyben a katalán öntududatott is jellképezi,mivel a múltban
+	  (különösen Francisco Franciouralmának idején)a katalánok öntudat bármely megnyilvánulását büntették.<br>
+	  Részben erre vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.</p>
+	  <h2>játékosok:</h2>
+	  <ol>
+	<li>li>Marc-André ter Stegen</li>
+    <li>  Nélson Semedo</li>
+	<li>Gerard Piqué</li>
+	<li>Ivan Rakitić</li>
+	<li>Sergio Busquets (3.számú csapatkapitány)</li>
+	<li>Denis Suárez</li>
+    <li>Arda Turan </li>
+	<li>Andrés Iniesta Csapatkapitán</li>
+	<li>uis Suárez</li>
+	<li>Lionel Messi (csapatkapitány-helyettes)</li>
+	<li>Ousmane Dembélé</li>
+	<li>Rafinha</li>
+	<li>Jasper Cillessen</li>
+	<li>Javier Mascherano (4.számú csapatkapitány)</li>
+	<li>Paulinho</li>
+	<li>Gerard Deulofeu</li>	
+	<li>Paco Alcácer</li>
+    <li>Jordi Alba</li>
+	<li>Lucas Digne</li>
+	<li>Sergi Roberto</li>
+	<li>André Gomes</li>
+	<li>Aleix Vidal</li>
+	<li>Samuel Umtiti</li>
+	<li>Thomas Vermaelen</li>
+</ol>
+
+
 	</body>
-</html>
+	</html>
