index.html-add validator in comment

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!-- <DOCTRYPE html> Kikommenteltem, mert ez duplan is van benne es eliras is van benne--> 
+<!-- Maskor majd hasznalj ellenorzot, pl ezt: https://validator.w3.org/#validate_by_input, hogy eszrevedd a hibakat egyedul is :) -->
 <!DOCTYPE html>
 <html>
 	<head>
