index: add comment about comment

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!-- <DOCTRYPE html> Kikommenteltem, mert ez duplan is van benne es eliras is van benne--> 
-<!-- Maskor majd hasznalj ellenorzot, pl ezt: https://validator.w3.org/#validate_by_input, hogy eszrevedd a hibakat egyedul is :) -->
+
+<!-- igy lehet kommentet tenni a HTML kodba, ez a kod a weboldalon nem fog megjelenni. 
+Olvasd el, hogy mire jok es hogyan a kommentek, itt:
+https://translate.google.com/translate?hl=en&sl=auto&tl=hu&u=https%3A%2F%2Fwww.w3schools.com%2Fhtml%2Fhtml_comments.asp&sandbox=1
+-->
+
+<!-- Maskor majd hasznalj ellenorzot, hogy eszrevedd a hibakat egyedul is :) Az ellenorzonek ez a cime:
+https://validator.w3.org/#validate_by_input
+-->
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -7,7 +16,7 @@
 	</head>
 	
 	<body>
-		<!-- Az itt kovetkezo reszt megformaztam, hogy szepen olvashato legyen-->
+		<!-- Az itt kovetkezo reszt megformaztam, hogy konnyebben olvashato legyen-->
 		<h1>FC BARCELONA</h1>
 		<h2>történeténete</h2>
 		<p>Az egyesületet 1899 november 29-én alapította a Svájci Hans Gamper.<br>
@@ -22,6 +31,7 @@
 		<!-- Eddig megformaztam, ami ez alatt van, azt meg javitsd ki, hogy egy vonalban kezdodjon az osszes li -->
 		<!--Meg van benne egy kis hiba is :) keresd meg es javitsd ki. Ha rakattintasz az elonezetre, akkor tuti hogy meglatod-->
 		<!-- https://jociszabo.github.io/Teszt-01/ -->
+		
 		
 		<h2>játékosok:</h2>
 	  <ol>
