--- a/index.html
+++ b/index.html
@@ -1,39 +1,21 @@
-<!-- <DOCTRYPE html> Kikommenteltem, mert ez duplan is van benne es eliras is van benne--> 
-
-<!-- igy lehet kommentet tenni a HTML kodba, ez a kod a weboldalon nem fog megjelenni. 
-Olvasd el, hogy mire jok es hogyan a kommentek, itt:
-https://translate.google.com/translate?hl=en&sl=auto&tl=hu&u=https%3A%2F%2Fwww.w3schools.com%2Fhtml%2Fhtml_comments.asp&sandbox=1
--->
-
-<!-- Maskor majd hasznalj ellenorzot, hogy eszrevedd a hibakat egyedul is :) Az ellenorzonek ez a cime:
-https://validator.w3.org/#validate_by_input
--->
-
-<!DOCTYPE html>
-<html>
+<DOCTRYPE html>
+	<!DOCTYPE html>
+	<html>
 	<head>
-		<title>FC Barcelona</title> <!-- Beirtam cimnek, hogy FC Barcelona, mert title mindig kell az oldalra -->
+		<title></title>
 	</head>
-	
 	<body>
-		<!-- Az itt kovetkezo reszt megformaztam, hogy konnyebben olvashato legyen-->
 		<h1>FC BARCELONA</h1>
 		<h2>történeténete</h2>
-		<p>Az egyesületet 1899 november 29-én alapította a Svájci Hans Gamper.<br>
-			Az Fc Barcelona Spanyolország Katalonia tartományának labdarügó csapata.<br>
-			A klub a spanyol labdarúgó-bajnokság kezdetétől megszakítás nélkül részt vesz. Az<br>
-			Fc Barcelona előbb a katalán regionális bajjnokságában,és a spanyol labdarúgó-bajnokságában vett részt.<br>
-			1928-ban megalakított egység spanyol labdarúgó.bajnokság (PrimeraDivisón) és a nemzetközé kupákban vált a spanyol,valamint a nemzetközi labdarúgás<br>
-			Az Fc Barcelona egyben a katalán öntududatott is jellképezi,mivel a múltban
-			(különösen Francisco Franciouralmának idején)a katalánok öntudat bármely megnyilvánulását büntették.<br>
-		 	Részben erre vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.
-		</p>
-		<!-- Eddig megformaztam, ami ez alatt van, azt meg javitsd ki, hogy egy vonalban kezdodjon az osszes li -->
-		<!--Meg van benne egy kis hiba is :) keresd meg es javitsd ki. Ha rakattintasz az elonezetre, akkor tuti hogy meglatod-->
-		<!-- https://jociszabo.github.io/Teszt-01/ -->
-		
-		
-		<h2>játékosok:</h2>
+	<p>Az egyesületet 1899 november 29-én alapította a Svájci Hans Gamper.<br>
+	Az Fc Barcelona Spanyolország Katalonia tartományának labdarügó csapata.<br>
+	A klub a spanyol labdarúgó-bajnokság kezdetétől megszakítás nélkül részt vesz. Az<br>
+	 Fc Barcelona előbb a katalán regionális bajjnokságában,és a spanyol labdarúgó-bajnokságában vett részt.<br>
+	  1928-ban megalakított egység spanyol labdarúgó.bajnokság (PrimeraDivisón) és a nemzetközé kupákban vált a spanyol,valamint a nemzetközi labdarúgás<br>
+	  Az Fc Barcelona egyben a katalán öntududatott is jellképezi,mivel a múltban
+	  (különösen Francisco Franciouralmának idején)a katalánok öntudat bármely megnyilvánulását büntették.<br>
+	  Részben erre vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.</p>
+	  <h2>játékosok:</h2>
 	  <ol>
 	<li>li>Marc-André ter Stegen</li>
     <li>  Nélson Semedo</li>
@@ -60,6 +42,8 @@ https://validator.w3.org/#validate_by_input
 	<li>Samuel Umtiti</li>
 	<li>Thomas Vermaelen</li>
 </ol>
+<h2>Készítette:Szabó József</h2>
+<img src="Joci.jpg"=wihd="600"heidght="900"Barcelona:)"">
 
 
 	</body>
