--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	  Részben erre vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.</p>
 	  <h2>játékosok:</h2>
 	  <ol>
-	<li>li>Marc-André ter Stegen</li>
-    <li>  Nélson Semedo</li>
+	<li>Marc-André ter Stegen</li>
+    <li>Nélson Semedo</li>
 	<li>Gerard Piqué</li>
 	<li>Ivan Rakitić</li>
 	<li>Sergio Busquets (3.számú csapatkapitány)</li>
