--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
-<DOCTRYPE html>
-	<!DOCTYPE html>
-	<html>
+<!--<DOCTRYPE html> EZ ITT NEM JO-->
+<!DOCTYPE html>
+<html>
 	<head>
-		<title></title>
+		<title>A TITLE SOSEM MARADHAT URESEN</title>
 	</head>
+
 	<body>
 		<h1>Helló világ!</h1>
 		<strong>Az első  weblapom</strong>
+		<p>Ez itt <strong>az első  weblapom</strong>, ezt igy is fel lehet irni. 
+			A strongot lehet hasznalni a tobbi tagen belul. jo, mi? :) </p>
 		<p>Üdv mindenkinek</p>
-		<div>Ez a tartalom</div>
+		<!-- <div>Ez a tartalom</div> DIVET MEGBESZELTUK, HOGY NEM HASZNALJUK :) Az a HTML 4-ig lehetett hasznalni,
+			jo ha felismered, de ha kodot irsz, akkor ne hasznald inkabb, mert regies) -->
 		<ol>
 			<li>1</li>
+		</ol>
+		<!-- Itt meg egy kis formazast csinaltam, a formazas azert fontos, hogy ha mar olyan nagyon hosszu lesz a kod, 
+akkor is megtalaljunk benne mindent. formazni a fa struktura szerint kell, szoval egymas ala kell tenni a nyito meg a 
+zaro tageket, ha pici az elem es egy sorban is elfer, akkor lehet hagyni egy sorban..
+A "fa strukturat" majd a javascriptnel fogjuk reszletesen venni, az egyebkent igy nez ki: http://bit.ly/2D9d7LT-->
 
-			</ol>
-	
+		<!-- pelda jo formazasra, itt egymas alatt vannak a nyito es a zaro <ol> tagek es a <li>-k egy sorban:
+
+		<ol>
+			<li>valami</li>
+			<li>valami2</li>
+		</ol>
+
+-->
+		
 	</body>
 	</html>
