--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Arany János családi kör</title>
-</head>
-<body>
-	<h1>Főcím</h1>
-	  <h2>Alcím</h2>
-	    <p>Este van<strong>Este van</strong>kiki nyügalomban</p><br>
-	      <strong>Fefetén</strong><h6>bolingat</h6><p>azeperfa lombja</p>
-	       <strong>Zúg az éji bogá</strong><p>neki megy a falnak</p><br>
-	        <p>NNagyott koppan</p><em>azután elhallgat</em>
+<!DOCTYPE html> <!-- HIBATLAN -->
+<html> <!-- HIBATLAN -->
+<head> <!-- HIBATLAN -->
+	<title>Arany János családi kör</title> <!-- HIBATLAN -->
+</head> <!-- HIBATLAN -->
+<body> <!-- HIBATLAN -->
+	<h1>Főcím</h1> <!-- HIBATLAN -->
+	  <h2>Alcím</h2>  <!-- irinyo pirinyo pici dolog, de jo ha tudod, hogy a h1, h2, p elemeket egymas ala irva "elegansabb"-->
+	    <p>Este van<strong>Este van</strong>kiki nyügalomban</p><br> <!-- HIBATLAN, picit szebb lenne, ha egymas ala lenne igazitva a sor eleje -->
+	      <strong>Fefetén</strong><h6>bolingat</h6><p>azeperfa lombja</p> <!-- CIMET h1, h2, h3... elemeket nem irunk szoveg koze, ha nagyobb szoveget szeretnel, azt majd a CSS reszben megtanuljuk hogy hogy kell -->
+	       <strong>Zúg az éji bogá</strong><p>neki megy a falnak</p><br> <!-- HIBATLAN, picit szebb lenne, ha egymas ala lenne igazitva a sor eleje-->
+	        <p>NNagyott koppan</p><em>azután elhallgat</em> <!-- HIBATLAN, picit szebb lenne, ha egymas ala lenne igazitva a sor eleje -->
 
+<!-- sok itt az ures hely. Ez nem hiba, de azert megiscsak folosleges, a jo programozo nem csinal folosleges dolgokat :) -->
 
-
-</body>
-</html>
+</body> <!-- HIBATLAN -->
+</html> <!-- HIBATLAN -->
