--- a/index.html
+++ b/index.html
@@ -1,17 +1,51 @@
-<!DOCTYPE html> <!-- HIBATLAN -->
-<html> <!-- HIBATLAN -->
-<head> <!-- HIBATLAN -->
-	<title>Arany János családi kör</title> <!-- HIBATLAN -->
-</head> <!-- HIBATLAN -->
-<body> <!-- HIBATLAN -->
-	<h1>Főcím</h1> <!-- HIBATLAN -->
-	  <h2>Alcím</h2>  <!-- irinyo pirinyo pici dolog, de jo ha tudod, hogy a h1, h2, p elemeket egymas ala irva "elegansabb"-->
-	    <p>Este van<strong>Este van</strong>kiki nyügalomban</p><br> <!-- HIBATLAN, picit szebb lenne, ha egymas ala lenne igazitva a sor eleje -->
-	      <strong>Fefetén</strong><h6>bolingat</h6><p>azeperfa lombja</p> <!-- CIMET h1, h2, h3... elemeket nem irunk szoveg koze, ha nagyobb szoveget szeretnel, azt majd a CSS reszben megtanuljuk hogy hogy kell -->
-	       <strong>Zúg az éji bogá</strong><p>neki megy a falnak</p><br> <!-- HIBATLAN, picit szebb lenne, ha egymas ala lenne igazitva a sor eleje-->
-	        <p>NNagyott koppan</p><em>azután elhallgat</em> <!-- HIBATLAN, picit szebb lenne, ha egymas ala lenne igazitva a sor eleje -->
+<!DOCTYPE html>
+	<html>
+	<head>
+		<title></title>
+	</head>
+	<body>
+		<h1>FC BARCELONA</h1>
+		<h2>történeténete</h2>
+	<p>Az egyesületet 1899 november 29-én alapította a Svájci Hans Gamper.<br>
+	Az Fc Barcelona Spanyolország Katalonia tartományának labdarügó csapata.<br>
+	A klub a spanyol labdarúgó-bajnokság kezdetétől megszakítás nélkül részt vesz. Az<br>
+	 Fc Barcelona előbb a katalán regionális bajjnokságában,és a spanyol labdarúgó-bajnokságában vett részt.<br>
+	  1928-ban megalakított egység spanyol labdarúgó.bajnokság (PrimeraDivisón) és a nemzetközé kupákban vált a spanyol,valamint a nemzetközi labdarúgás<br>
+	  Az Fc Barcelona egyben a katalán öntududatott is jellképezi,mivel a múltban
+	  (különösen Francisco Franciouralmának idején)a katalánok öntudat bármely megnyilvánulását büntették.<br>
+	  Részben erre vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.</p>
+	  <h2>játékosok:</h2>
+	  <ol> <strong>
+	<li>Marc-André ter Stegen</li>
+    <li>Nélson Semedo</li>
+	<li>Gerard Piqué</li>
+	<li>Ivan Rakitić</li>
+	<li>Sergio Busquets (3.számú csapatkapitány)</li>
+	<li>Denis Suárez</li>
+    <li>Arda Turan </li>
+	<li>Andrés Iniesta Csapatkapitán</li>
+	<li>uis Suárez</li>
+	<li>Lionel Messi (csapatkapitány-helyettes)</li>
+	<li>Ousmane Dembélé</li>
+	<li>Rafinha</li>
+	<li>Jasper Cillessen</li>
+	<li>Javier Mascherano (4.számú csapatkapitány)</li>
+	<li>Paulinho</li>
+	<li>Gerard Deulofeu</li>	
+	<li>Paco Alcácer</li>
+    <li>Jordi Alba</li>
+	<li>Lucas Digne</li>
+	<li>Sergi Roberto</li>
+	<li>André Gomes</li>
+	<li>Aleix Vidal</li>
+	<li>Samuel Umtiti</li>
+	<li>Thomas Vermaelen</li>
+</strong>
+</ol>
+<h3>készítette:Szabó József</h3>
+<img src="Joci.jpg"wihd="500"heidght="500"Barcelona:)"><br>
+<strong>UI:Hajrá Barcelona!</strong>
 
-<!-- sok itt az ures hely. Ez nem hiba, de azert megiscsak folosleges, a jo programozo nem csinal folosleges dolgokat :) -->
 
-</body> <!-- HIBATLAN -->
-</html> <!-- HIBATLAN -->
+	</body>
+	</html>
