--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title></title>
+		<title>Joci.Barcelona</title>
+	<style>
+
+	@import url('https://fonts.googleapis.com/css?family=Work+Sans:900&subset=latin-ext');
+		body{
+			background:url(images.jpg);
+			background-repeat:no-repeat; 
+			background-size: cover;
+			color:Black 
+			font-size 40px; 
+			font-family: "work Sans"
+
+	</style>
+
 	</head>
 	<body>
 		<h1>FC BARCELONA</h1>
 		<h2>történeténete</h2>
-	<p>Az egyesületet 1899 november 29-én alapította a Svájci Hans Gamper.<br>
+	<strong> Az egyesületet 1899 november 29-én alapította a Svájci Hans Gamper.<br>
 	Az Fc Barcelona Spanyolország Katalonia tartományának labdarügó csapata.<br>
 	A klub a spanyol labdarúgó-bajnokság kezdetétől megszakítás nélkül részt vesz. Az<br>
-	 Fc Barcelona előbb a katalán regionális bajjnokságában,és a spanyol labdarúgó-bajnokságában vett részt.<br>
-	  1928-ban megalakított egység spanyol labdarúgó.bajnokság (PrimeraDivisón) és a nemzetközé kupákban vált a spanyol,valamint a nemzetközi labdarúgás<br>
-	  Az Fc Barcelona egyben a katalán öntududatott is jellképezi,mivel a múltban
-	  (különösen Francisco Franciouralmának idején)a katalánok öntudat bármely megnyilvánulását büntették.<br>
-	  Részben erre vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.</p>
+	 Fc Barcelona előbb a katalán regionális bajjnokságában,és a spanyol labdarúgó-bajnokságában vett részt.
+	  1928-ban megalakított egység spanyol labdarúgó.bajnokság (PrimeraDivisón) és a nemzetközé kupákban vált a spanyol,valamint a nemzetközi labdarúgás Az Fc Barcelona egyben a katalán öntududatott is jellképezi,mivel a múltban
+	  (különösen Francisco Franciouralmának idején)a katalánok öntudat bármely megnyilvánulását büntették. Részben erre vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.</strong>
 	  <h2>játékosok:</h2>
 	  <ol> <strong>
 	<li>Marc-André ter Stegen</li>
@@ -24,7 +35,7 @@
 	<li>Denis Suárez</li>
     <li>Arda Turan </li>
 	<li>Andrés Iniesta Csapatkapitán</li>
-	<li>uis Suárez</li>
+	<li>Luis Suárez</li>
 	<li>Lionel Messi (csapatkapitány-helyettes)</li>
 	<li>Ousmane Dembélé</li>
 	<li>Rafinha</li>
@@ -33,10 +44,10 @@
 	<li>Paulinho</li>
 	<li>Gerard Deulofeu</li>	
 	<li>Paco Alcácer</li>
+	<li>André Gomes</li>
     <li>Jordi Alba</li>
 	<li>Lucas Digne</li>
 	<li>Sergi Roberto</li>
-	<li>André Gomes</li>
 	<li>Aleix Vidal</li>
 	<li>Samuel Umtiti</li>
 	<li>Thomas Vermaelen</li>
