index:javitva css
forras: https://fonts.google.com/specimen/Work+Sans?selection.family=Work+Sans
es https://stackoverflow.com/questions/10036977/best-way-to-include-css-why-use-import

--- a/index.html
+++ b/index.html
@@ -2,27 +2,30 @@
 <html lang="hu">
 <head>
 	<title>Joci.Barcelona</title>
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
 	<style>
-	@import url('https://fonts.googleapis.com/css?family=Work+Sans:900&subset=latin-ext');
 		body{
 			background: url(images.jpg);
 			background-repeat: no-repeat; 
 			background-size: cover;
-			color: black; 
+			color: #000; 
 			font-size: 40px; 
-			font-family: "work Sans"
+			font-family: 'Work Sans', sans-serif;
 		}
 	</style>
 </head>
 <body>
 	<h1>FC BARCELONA</h1>
 	<h2>történeténete</h2>
-	<p>Az egyesületet <strong>1899 november 29-én</strong> alapította a Svájci Hans Gamper.<br>
-	Az Fc Barcelona Spanyolország Katalonia tartományának labdarügó csapata.<br>
-	A klub a spanyol labdarúgó-bajnokság kezdetétől megszakítás nélkül részt vesz. Az<br>
-	Fc Barcelona előbb a katalán regionális bajjnokságában,és a spanyol labdarúgó-bajnokságában vett részt.
-	1928-ban megalakított egység spanyol labdarúgó.bajnokság (PrimeraDivisón) és a nemzetközé kupákban vált a spanyol,valamint a nemzetközi labdarúgás Az Fc Barcelona egyben a katalán öntududatott is jellképezi,mivel a múltban
-	(különösen Francisco Franciouralmának idején)a katalánok öntudat bármely megnyilvánulását büntették. Részben erre vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.
+	<p>
+		Az egyesületet <strong>1899 november 29-én</strong> alapította a Svájci Hans Gamper.<br>
+		Az Fc Barcelona Spanyolország Katalonia tartományának labdarügó csapata.<br>
+		A klub a spanyol labdarúgó-bajnokság kezdetétől megszakítás nélkül részt vesz. Az<br>
+		Fc Barcelona előbb a katalán regionális bajjnokságában,és a spanyol labdarúgó-bajnokságában vett részt.
+		1928-ban megalakított egység spanyol labdarúgó.bajnokság (PrimeraDivisón) és a nemzetközé kupákban vált a <br>
+		spanyol,valamint a nemzetközi labdarúgás Az Fc Barcelona egyben a katalán öntududatott is jellképezi,mivel a múltban<br>
+		(különösen Francisco Francio uralmának idején)a katalánok öntudat bármely megnyilvánulását büntették. Részben erre 
+		vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.
 	</p>
 	<h2>játékosok:</h2>
 	<ol> 
