--- a/index.html
+++ b/index.html
@@ -1,61 +1,60 @@
+
 <!DOCTYPE html>
-<html lang="hu">
-<head>
-	<title>Joci.Barcelona</title>
-	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
-	<style>
-		body{
-			background: url(images.jpg);
-			background-repeat: no-repeat; 
-			background-size: cover;
-			color: #000; 
-			font-size: 40px; 
-			font-family: 'Work Sans', sans-serif;
-		}
+	<html>
+	<head>
+		<title>Joci.Barcelona</title>
+	<style>	
+     	body{
+      	    background-image: url("images.jpg");
+      	    background-repeat: no-repeat;
+      	    background-position: center;
+      	    background-size: cover;
+      	    color:white
+      	}
 	</style>
-</head>
-<body>
-	<h1>FC BARCELONA</h1>
-	<h2>történeténete</h2>
-	<p>
-		Az egyesületet <strong>1899 november 29-én</strong> alapította a Svájci Hans Gamper.<br>
-		Az Fc Barcelona Spanyolország Katalonia tartományának labdarügó csapata.<br>
-		A klub a spanyol labdarúgó-bajnokság kezdetétől megszakítás nélkül részt vesz. Az<br>
-		Fc Barcelona előbb a katalán regionális bajjnokságában,és a spanyol labdarúgó-bajnokságában vett részt.
-		1928-ban megalakított egység spanyol labdarúgó.bajnokság (PrimeraDivisón) és a nemzetközé kupákban vált a <br>
-		spanyol,valamint a nemzetközi labdarúgás Az Fc Barcelona egyben a katalán öntududatott is jellképezi,mivel a múltban<br>
-		(különösen Francisco Francio uralmának idején)a katalánok öntudat bármely megnyilvánulását büntették. Részben erre 
-		vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.
-	</p>
-	<h2>játékosok:</h2>
-	<ol> 
-		<li>Marc-André ter Stegen</li>
-		<li>Nélson Semedo</li>
-		<li>Gerard Piqué</li>
-		<li>Ivan Rakitić</li>
-		<li>Sergio Busquets (3.számú csapatkapitány)</li>
-		<li>Denis Suárez</li>
-		<li>Arda Turan </li>
-		<li>Andrés Iniesta Csapatkapitán</li>
-		<li>Luis Suárez</li>
-		<li>Lionel Messi (csapatkapitány-helyettes)</li>
-		<li>Ousmane Dembélé</li>
-		<li>Rafinha</li>
-		<li>Jasper Cillessen</li>
-		<li>Javier Mascherano (4.számú csapatkapitány)</li>
-		<li>Paulinho</li>
-		<li>Gerard Deulofeu</li>	
-		<li>Paco Alcácer</li>
-		<li>André Gomes</li>
-		<li>Jordi Alba</li>
-		<li>Lucas Digne</li>
-		<li>Sergi Roberto</li>
-		<li>Aleix Vidal</li>
-		<li>Samuel Umtiti</li>
-		<li>Thomas Vermaelen</li>
-	</ol>
-	<h3>készítette:Szabó József</h3>
-	<img src="Joci.jpg" width="500" height="500" alt="Barcelona"><br>
-	<strong>UI:Hajrá Barcelona!</strong>
-</body>
-</html>
+
+	</head>
+	<body> 
+		<h1>FC BARCELONA</h1>
+		<th> <h2>történeténete</h2> </th>
+	<strong> Az egyesületet 1899 november 29-én alapította a Svájci Hans Gamper.<br>
+	Az Fc Barcelona Spanyolország Katalonia tartományának labdarügó csapata.<br>
+	A klub a spanyol labdarúgó-bajnokság kezdetétől megszakítás nélkül részt vesz. Az<br>
+	 Fc Barcelona előbb a katalán regionális bajnokságában,és a spanyol kupában, vett részt.
+	  1928-ban megalakított egység spanyol labdarúgó.bajnokság (Primera Divisón) és a nemzetközé kupákban vált a spanyol,valamint a nemzetközi labdarúgás egyik legmeghatározóbb egyesületévé. Az Fc Barcelona egyben a katalán öntududatott is jellképezi,mivel a múltban
+	  (különösen Francisco Franciouralmának idején)a katalánok öntudat bármely megnyilvánulását büntették. Részben erre vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.</strong>
+
+	   <h2>játékosok:</h2>
+	  <ol> <strong>
+	<tr><li>Marc-André ter Stegen</li></tr>
+    <li>Nélson Semedo</li>
+	<li>Gerard Piqué</li>
+	<li>Ivan Rakitić</li>
+	<li>Sergio Busquets (3.számú csapatkapitány)</li>
+	<li>Denis Suárez</li>
+    <li>Arda Turan </li>
+	<li>Andrés Iniesta Csapatkapitán</li>
+	<li>Luis Suárez</li>
+	<li>Lionel Messi (csapatkapitány-helyettes)</li>
+	<li>Ousmane Dembélé</li>
+	<li>Rafinha</li>
+	<li>Jasper Cillessen</li>
+	<li>Javier Mascherano (4.számú csapatkapitány)</li>
+	<li>Paulinho</li>
+	<li>Gerard Deulofeu</li>	
+	<li>Paco Alcácer</li>
+	<li>André Gomes</li>
+    <li>Jordi Alba</li>
+	<li>Lucas Digne</li>
+	<li>Sergi Roberto</li>
+	<li>Aleix Vidal</li>
+	<li>Samuel Umtiti</li>
+	<li>Thomas Vermaelen</li>
+</ol> 
+ <h3 align="right"> készítette:Szabó József</h3>
+<img src="Joci.jpg" align="right" widh="500"heidght="500"Barcelona:)"><br>
+<strong align="right">UI:Hajrá Barcelona!</strong>
+
+
+	</body>
+	</html>
