--- a/index.html
+++ b/index.html
@@ -24,35 +24,39 @@
 	  1928-ban megalakított egység spanyol labdarúgó.bajnokság (Primera Divisón) és a nemzetközé kupákban vált a spanyol,valamint a nemzetközi labdarúgás egyik legmeghatározóbb egyesületévé. Az Fc Barcelona egyben a katalán öntududatott is jellképezi,mivel a múltban
 	  (különösen Francisco Franciouralmának idején)a katalánok öntudat bármely megnyilvánulását büntették. Részben erre vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.</strong>
 
-	   <h2>játékosok:</h2>
-	  <ol> <strong>
-	<tr><li>Marc-André ter Stegen</li></tr>
-    <li>Nélson Semedo</li>
-	<li>Gerard Piqué</li>
-	<li>Ivan Rakitić</li>
-	<li>Sergio Busquets (3.számú csapatkapitány)</li>
-	<li>Denis Suárez</li>
-    <li>Arda Turan </li>
-	<li>Andrés Iniesta Csapatkapitán</li>
-	<li>Luis Suárez</li>
-	<li>Lionel Messi (csapatkapitány-helyettes)</li>
-	<li>Ousmane Dembélé</li>
-	<li>Rafinha</li>
-	<li>Jasper Cillessen</li>
-	<li>Javier Mascherano (4.számú csapatkapitány)</li>
-	<li>Paulinho</li>
-	<li>Gerard Deulofeu</li>	
-	<li>Paco Alcácer</li>
-	<li>André Gomes</li>
-    <li>Jordi Alba</li>
-	<li>Lucas Digne</li>
-	<li>Sergi Roberto</li>
-	<li>Aleix Vidal</li>
-	<li>Samuel Umtiti</li>
-	<li>Thomas Vermaelen</li>
+	 <table border="2">
+	 	<tr><th>Nemzetiség</th><th>Játékos</th>
+	 	<tr><td>Német</td><td>Marc-André ter Stegen</td></tr>
+	 	<tr><td>Portugál</td><td>Nelson Semendo</td></tr>
+	 	<tr><th>Spanyol</th><<td>Gerard Piqué</td></tr>
+	 	<tr><td>Horváth</td><<td>Ivan Rakitic</td></tr>
+	 	<tr><th>Spanyol</th><<th>Sergio Busquets</th></tr>
+	 	<tr><th>Spanyol</th><th>Denis Suárez</th></tr>
+	 	<tr><th>Török</th><th>Arda Turan</th></tr>
+	 	<tr><th>Spanyol</th><<th>Andrés Iniesta</th></tr>
+	 	<tr><th>Urugay</th><th>Luis Suárez</th></tr>
+	 	<tr><th>Argentin</th><th>Lionel Messi</th></tr>
+	 	<tr><th>Francia</th><th>Ousname Dembélé</th></tr>
+	 	<tr><th>Brazil</th><th>Rafinha</th></tr>
+	 	<tr><th>Holland</th><th>Jasper Cillesen</th></tr>
+	 	<tr><th>Brazil</th><th>Philippe Coutinho</th></tr>
+	 	<tr><th>Brazzil</th><th>Paulinho</th></tr>
+	 	<tr><th>Spanyol</th><<th>Gerard Deulofeu</th></tr>
+	 	<tr><th>Spanyol</th><th>Paco Alcácer</th></tr>
+	 	<tr><th>Spanyol</th><th>Jordi Alba</th></tr>
+	 	<tr><th>Francia</th><th>Lucas Digne</th></tr>
+	 	<tr><th>Spanyol</th><th>Sergi Roberto</th></tr>
+	 	<tr><th>Portugál</th><th>André Gomes</th></tr>
+	 	<tr><th>Spanyol</th><th>Alex Vidal</th></tr>
+	 	<tr><th>Francia</th><th>Samuel Umtiti</th></tr>
+	 	<tr><th>Belga</th><th>Thomas Vermaelen</th></tr>
+	 	<tr><th>Kolumbia</th><th>Yery Mina</th></tr>
+
+ </tr> 
+</table>
 </ol> 
- <h3 align="right"> készítette:Szabó József</h3>
-<img src="Joci.jpg" align="right" widh="500"heidght="500"Barcelona:)"><br>
+ <h3 aiign="right">készítette:Szabó József</h3>
+<img src="Joci.jpg" widh="500"heidght="500"Barcelona:)"><br>
 <strong align="right">UI:Hajrá Barcelona!</strong>
 
 
