Tablazatok: nem en tanitottam, csak javitas

--- a/index.html
+++ b/index.html
@@ -1,64 +1,90 @@
 
 <!DOCTYPE html>
-	<html>
+<html>
 	<head>
 		<title>Joci.Barcelona</title>
-	<style>	
-     	body{
-      	    background-image: url("images.jpg");
-      	    background-repeat: no-repeat;
-      	    background-position: center;
-      	    background-size: cover;
-      	    color:white
-      	}
-	</style>
-
+		<style>	
+		body{
+		    background-image: url("images.jpg");
+		    background-repeat: no-repeat;
+		    background-position: center;
+		    background-size: cover;
+		    color:white
+		}
+		
+		th, td{
+			border: 1px solid;
+		}
+			
+		</style>
 	</head>
+	
 	<body> 
 		<h1>FC BARCELONA</h1>
-		<th> <h2>történeténete</h2> </th>
-	<strong> Az egyesületet 1899 november 29-én alapította a Svájci Hans Gamper.<br>
-	Az Fc Barcelona Spanyolország Katalonia tartományának labdarügó csapata.<br>
-	A klub a spanyol labdarúgó-bajnokság kezdetétől megszakítás nélkül részt vesz. Az<br>
-	 Fc Barcelona előbb a katalán regionális bajnokságában,és a spanyol kupában, vett részt.
-	  1928-ban megalakított egység spanyol labdarúgó.bajnokság (Primera Divisón) és a nemzetközé kupákban vált a spanyol,valamint a nemzetközi labdarúgás egyik legmeghatározóbb egyesületévé. Az Fc Barcelona egyben a katalán öntududatott is jellképezi,mivel a múltban
-	  (különösen Francisco Franciouralmának idején)a katalánok öntudat bármely megnyilvánulását büntették. Részben erre vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.</strong>
+		<h2>történeténete</h2>
+		<strong> Az egyesületet 1899 november 29-én alapította a Svájci Hans Gamper.<br>
+		Az Fc Barcelona Spanyolország Katalonia tartományának labdarügó csapata.<br>
+		A klub a spanyol labdarúgó-bajnokság kezdetétől megszakítás nélkül részt vesz. Az<br>
+		Fc Barcelona előbb a katalán regionális bajnokságában,és a spanyol kupában, vett részt.
+		1928-ban megalakított egység spanyol labdarúgó.bajnokság (Primera Divisón) és a nemzetközé kupákban vált a spanyol,valamint a nemzetközi labdarúgás egyik legmeghatározóbb egyesületévé. Az Fc Barcelona egyben a katalán öntududatott is jellképezi,mivel a múltban
+		(különösen Francisco Franciouralmának idején)a katalánok öntudat bármely megnyilvánulását büntették. Részben erre vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.</strong>
 
-	 <table border="2">
-	 	<tr><th>Nemzetiség</th><th>Játékos</th>
-	 	<tr><td>Német</td><td>Marc-André ter Stegen</td></tr>
-	 	<tr><td>Portugál</td><td>Nelson Semendo</td></tr>
-	 	<tr><th>Spanyol</th><<td>Gerard Piqué</td></tr>
-	 	<tr><td>Horváth</td><<td>Ivan Rakitic</td></tr>
-	 	<tr><th>Spanyol</th><<th>Sergio Busquets</th></tr>
-	 	<tr><th>Spanyol</th><th>Denis Suárez</th></tr>
-	 	<tr><th>Török</th><th>Arda Turan</th></tr>
-	 	<tr><th>Spanyol</th><<th>Andrés Iniesta</th></tr>
-	 	<tr><th>Urugay</th><th>Luis Suárez</th></tr>
-	 	<tr><th>Argentin</th><th>Lionel Messi</th></tr>
-	 	<tr><th>Francia</th><th>Ousname Dembélé</th></tr>
-	 	<tr><th>Brazil</th><th>Rafinha</th></tr>
-	 	<tr><th>Holland</th><th>Jasper Cillesen</th></tr>
-	 	<tr><th>Brazil</th><th>Philippe Coutinho</th></tr>
-	 	<tr><th>Brazzil</th><th>Paulinho</th></tr>
-	 	<tr><th>Spanyol</th><<th>Gerard Deulofeu</th></tr>
-	 	<tr><th>Spanyol</th><th>Paco Alcácer</th></tr>
-	 	<tr><th>Spanyol</th><th>Jordi Alba</th></tr>
-	 	<tr><th>Francia</th><th>Lucas Digne</th></tr>
-	 	<tr><th>Spanyol</th><th>Sergi Roberto</th></tr>
-	 	<tr><th>Portugál</th><th>André Gomes</th></tr>
-	 	<tr><th>Spanyol</th><th>Alex Vidal</th></tr>
-	 	<tr><th>Francia</th><th>Samuel Umtiti</th></tr>
-	 	<tr><th>Belga</th><th>Thomas Vermaelen</th></tr>
-	 	<tr><th>Kolumbia</th><th>Yery Mina</th></tr>
+	 	<table>
+			<tr>
+				<th>Nemzetiség</th>
+				<th>Játékos</th>
+			</tr>
+			<tr>
+				<td>Német</td>
+				<td>Marc-André ter Stegen</td>
+			</tr>
+			<tr>
+				<td>Portugál</td>
+				<td>Nelson Semendo</td>
+			</tr>
+			<tr>
+				<td>Spanyol</td>
+				<td>Gerard Piqué</td>
+			</tr>
+			<tr>
+				<td>Horváth</td>
+				<td>Ivan Rakitic</td>
+			</tr>
+			<tr>
+				<td>Spanyol</td>
+				<td>Sergio Busquets</td>
+			</tr>
+			<tr>
+				<td>Spanyol</td>
+				<td>Denis Suárez</td>
+			</tr>
+			<tr>
+				<td>Török</td>
+				<td>Arda Turan</td>
+			</tr>
+			<!-- A TOBBIT IS PONT IGY KELL MEGFORMAZNI
+			<tr><th>Spanyol</th><<th>Andrés Iniesta</th></tr>
+			<tr><th>Urugay</th><th>Luis Suárez</th></tr>
+			<tr><th>Argentin</th><th>Lionel Messi</th></tr>
+			<tr><th>Francia</th><th>Ousname Dembélé</th></tr>
+			<tr><th>Brazil</th><th>Rafinha</th></tr>
+			<tr><th>Holland</th><th>Jasper Cillesen</th></tr>
+			<tr><th>Brazil</th><th>Philippe Coutinho</th></tr>
+			<tr><th>Brazzil</th><th>Paulinho</th></tr>
+			<tr><th>Spanyol</th><<th>Gerard Deulofeu</th></tr>
+			<tr><th>Spanyol</th><th>Paco Alcácer</th></tr>
+			<tr><th>Spanyol</th><th>Jordi Alba</th></tr>
+			<tr><th>Francia</th><th>Lucas Digne</th></tr>
+			<tr><th>Spanyol</th><th>Sergi Roberto</th></tr>
+			<tr><th>Portugál</th><th>André Gomes</th></tr>
+			<tr><th>Spanyol</th><th>Alex Vidal</th></tr>
+			<tr><th>Francia</th><th>Samuel Umtiti</th></tr>
+			<tr><th>Belga</th><th>Thomas Vermaelen</th></tr>
+			<tr><th>Kolumbia</th><th>Yery Mina</th></tr> -->
+		</table>
 
- </tr> 
-</table>
-</ol> 
- <h3 aiign="right">készítette:Szabó József</h3>
-<img src="Joci.jpg" widh="500"heidght="500"Barcelona:)"><br>
-<strong align="right">UI:Hajrá Barcelona!</strong>
-
-
+		<h3>készítette:Szabó József</h3>
+		<img src="Joci.jpg" width="500" height="500" alt="Barcelona:)"><br>
+		<p><strong>UI:Hajrá Barcelona!</strong></p>
 	</body>
-	</html>
+</html>
