--- a/index.html
+++ b/index.html
@@ -1,90 +1,12 @@
-
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Joci.Barcelona</title>
-		<style>	
-		body{
-		    background-image: url("images.jpg");
-		    background-repeat: no-repeat;
-		    background-position: center;
-		    background-size: cover;
-		    color:white
-		}
-		
-		th, td{
-			border: 1px solid;
-		}
-			
-		</style>
-	</head>
-	
-	<body> 
-		<h1>FC BARCELONA</h1>
-		<h2>történeténete</h2>
-		<strong> Az egyesületet 1899 november 29-én alapította a Svájci Hans Gamper.<br>
-		Az Fc Barcelona Spanyolország Katalonia tartományának labdarügó csapata.<br>
-		A klub a spanyol labdarúgó-bajnokság kezdetétől megszakítás nélkül részt vesz. Az<br>
-		Fc Barcelona előbb a katalán regionális bajnokságában,és a spanyol kupában, vett részt.
-		1928-ban megalakított egység spanyol labdarúgó.bajnokság (Primera Divisón) és a nemzetközé kupákban vált a spanyol,valamint a nemzetközi labdarúgás egyik legmeghatározóbb egyesületévé. Az Fc Barcelona egyben a katalán öntududatott is jellképezi,mivel a múltban
-		(különösen Francisco Franciouralmának idején)a katalánok öntudat bármely megnyilvánulását büntették. Részben erre vezethető vissza a Real Madrddal elleni rivarizálás,amely annak idején a Frranco-rendszer támogatását élvezte.</strong>
-
-	 	<table>
-			<tr>
-				<th>Nemzetiség</th>
-				<th>Játékos</th>
-			</tr>
-			<tr>
-				<td>Német</td>
-				<td>Marc-André ter Stegen</td>
-			</tr>
-			<tr>
-				<td>Portugál</td>
-				<td>Nelson Semendo</td>
-			</tr>
-			<tr>
-				<td>Spanyol</td>
-				<td>Gerard Piqué</td>
-			</tr>
-			<tr>
-				<td>Horváth</td>
-				<td>Ivan Rakitic</td>
-			</tr>
-			<tr>
-				<td>Spanyol</td>
-				<td>Sergio Busquets</td>
-			</tr>
-			<tr>
-				<td>Spanyol</td>
-				<td>Denis Suárez</td>
-			</tr>
-			<tr>
-				<td>Török</td>
-				<td>Arda Turan</td>
-			</tr>
-			<!-- A TOBBIT IS PONT IGY KELL MEGFORMAZNI
-			<tr><th>Spanyol</th><<th>Andrés Iniesta</th></tr>
-			<tr><th>Urugay</th><th>Luis Suárez</th></tr>
-			<tr><th>Argentin</th><th>Lionel Messi</th></tr>
-			<tr><th>Francia</th><th>Ousname Dembélé</th></tr>
-			<tr><th>Brazil</th><th>Rafinha</th></tr>
-			<tr><th>Holland</th><th>Jasper Cillesen</th></tr>
-			<tr><th>Brazil</th><th>Philippe Coutinho</th></tr>
-			<tr><th>Brazzil</th><th>Paulinho</th></tr>
-			<tr><th>Spanyol</th><<th>Gerard Deulofeu</th></tr>
-			<tr><th>Spanyol</th><th>Paco Alcácer</th></tr>
-			<tr><th>Spanyol</th><th>Jordi Alba</th></tr>
-			<tr><th>Francia</th><th>Lucas Digne</th></tr>
-			<tr><th>Spanyol</th><th>Sergi Roberto</th></tr>
-			<tr><th>Portugál</th><th>André Gomes</th></tr>
-			<tr><th>Spanyol</th><th>Alex Vidal</th></tr>
-			<tr><th>Francia</th><th>Samuel Umtiti</th></tr>
-			<tr><th>Belga</th><th>Thomas Vermaelen</th></tr>
-			<tr><th>Kolumbia</th><th>Yery Mina</th></tr> -->
-		</table>
-
-		<h3>készítette:Szabó József</h3>
-		<img src="Joci.jpg" width="500" height="500" alt="Barcelona:)"><br>
-		<p><strong>UI:Hajrá Barcelona!</strong></p>
+<html lang="hu">
+<head>
+	<meta charset="utf-8">
+	<title>Linkek gyakorlás</title>
+</head>
+<body>
+	<p>Az <strong>Fc Barcelona</strong> <a href="https://www,wikipégia/Spanyolország.hu">Soanyolország</a> <a href="https://www.wikipégia/katalonia">katalonia</a> tartományainak <a href="https://www.wikipégia/labdarúgocspata.hu">labdarúgócsapata<a>.</p>
+		<div>A klub <a href="https://www.wikipédia/spanyol labdarúgó-bajnokság">spanyol labdarúgó-bajnokság</a> kezdetétől megszakítás nélkül részt  vesz az első osztály bajnoki küzdrlmében. Az egyeeület<br><a href="https://www.wikipédia(1899.november 29.hu">1899 november 29</a>-én alapította a <a href="https://www.wikipédia/svájci Hans Gamper">svájci Hans Gamper</a>.Az Fc Barcelona előbb a katalán regionnális bajnokságban és a <a href="https:((www.wikipédia/spanyol labdarrúgükupában.hu">labdarúgókupában</a>,később pedig az  <a href="https://www.wikipédia/1928">1928</a>-ban megalakított egységes spanyol<br>labdarúgó-bajnokságban és nemzetközi  kuoában vált a spanyol,valamint a nemzetközi labdarúgás egyik legmeghatározóbb egyesületévé.<br>
+		A klub jelentőseebb eredményeit tekintve a <a href="https://spanyol labdarúgó-bajnokság első osztályát">spanyol labdarügó-bajnokság első osztályát</a>24, a <a href="https://www.wikipédia/spanyol labdarúgókupát">spanyol labdarúgókupát</a>28,a <a href="https://www.wikipédia/spanyol labdarúgó-szuperkupát">spanyol labdarúgó-szuperkupát</a>11. az <a href="https://www.wikipédia/UEFA-bajnokok ligája.hu">UEFA-bajnokok ligája</a>és <a href="httpsú://wwwű.wikipédia/elődjét.hu">elódjét</a> öt,az <a href="https://UEFA-kupa elődjét.hu">UEFA-kzpa elődjét</a> három a <a href="https://www,wikipédia/kupagyőztesek Európa-kupáját.hu">kuőagyóztesek Európa-kupáját</a> nnégy, az <a href="https://www.wikipédia/UEFA-Szoperkupát"UEFA-Szuperkupát></a> peddig öt alkalommal nyerte meg a csapat. Ezen kívül számps kisebb spanyol és katalán trófeát tudhat magáénak a klub.<br>Az Fc Barcelona egyben a  katalán nemzeti öntudatot is jelképezi,mivel a móltban =különösen <a href="https://www.wikipédia/Fraciso Franco.hu">Franciso Franco</a> uralmának idején) a katalán öntudat bármely egyéb megnyilvánulását büntették. Részben erre vezethető vissza a klub nagymértékű rivalizálása a <a href="https://www.wikipédia/Real Madriddal.hu"RealMadriddal></a> szemben,amely annak idején a Franco-rendszer támogatását élvezte.<br>A csapat eddig olyan világhírrű külföldi játékosokat tudhat soraiban,mint többek között <a href="https://www.wikipédia/Kubai László.hu">Kubai László</a>.<a href="https://www.wikipédia/Kocsis Sándor.hu">Kocsis Sándor</a>,<a href="https://www.wikipédia/Czibor Zoltán">Czibor Zoltán</a>,<a href="https://www.wikipédia/Johan Cruyff">Johan Cruyff</a>,<a href="https://www.wikipédia=Diego Maradonaa.hu">Diego Maradona</a>,<a href="https://Gary Linker.hu">Gary Linker</a>,<a href="https://www.wikipédia/Romário.hu">Romário</a>,<a href="https://www.wikipédia/Hiszto Sztoicskov">Hiszto Sztoicskov</a>,<a href="https://www.wikipédia/Rivaldo.hu">Rivaldo</a>,<a href="https://www.wikipédiaű/Lus Figo.hu"Luis-Figo></a>,<a href="https://www.wikipédia/Ronaldinho.hu"Ronaldinho></a>,<a href="https://www.wikipédia/Lionel Messi.hu"Messi></a>,<a href="https://www.wikipédia/Thierry henry.hu"Thierry-Henry></a>,<a href="https://www.wikipédia/Zlatan Ibranovic"Ibranovic></a>,<a href="https://www.wikipédia%Luis Suárez.hu"Suárez></a> és <a href="https://www.wikipédia/Neymar.hu"Neymar></a> A klub játékosai közül peddig számos labdarúgó volt a meghatározó tagja a<br> <a href="https://www.wikipédia/Spanyol labdarúgó-válogatottak.hu"Válogatottnak></a></div>
 	</body>
-</html>
+	</html>
